--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
+    # - name: Checkout
+    #   uses: actions/checkout@master
 
     - name: magiconch
       uses: magiconch/magiconch.github.io@main
