--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-        uses: actions/checkout@v2 # If you're using actions/checkout@v2 - must set persist-credentials to false in most cases for the deployment to work correctly.
-        with:
-          persist-credentials: false
-
+      uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+      with:
+        persist-credentials: false
     - name: Install and Build
         run: |
           npm install
