--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,9 @@ jobs:
       with:
         persist-credentials: false
     - name: Install and Build
-        run: npm install && npm run build  
+        run: npm install
+    - name: Install and Build
+      run: npm run build
 
     # - name: Deploy
     #   uses: magiconch/magiconch.github.io@main
