--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,17 @@ jobs:
       uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
       with:
         persist-credentials: false
-    - name: Install and Build
-        run: npm install
-    - name: Install and Build
-      run: npm run build
+    # 生成静态文件
+    - name: Build
+      run: npm install && npm run build
+
+      # 部署到 GitHub Pages
+     - name: Deploy
+      uses: magiconch/magiconch.github.io@main
+      with:
+         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: main
+        FOLDER: docs/
 
     # - name: Deploy
     #   uses: magiconch/magiconch.github.io@main
