--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,3 +14,10 @@ jobs:
     # 生成静态文件
     - name: Build
       run: npm install && npm run build
+    - name: Deploy
+        uses: magiconch/magiconch.github.io@main
+        with:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: main # The branch the action should deploy to.
+          FOLDER: docs/ # The folder the action should deploy.
+          BUILD_SCRIPT: npm install && npm run build && cd docs/
