--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,8 @@ jobs:
     - name: Build
       run: npm install && npm run build
     - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: main # The branch the action should deploy to.
-          FOLDER: docs/ # The folder the action should deploy.
-          BUILD_SCRIPT: npm install && npm run build && cd docs/
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: docs # The folder the action should deploy.
